fixed whitespace on bottom of login and register page

--- a/website-backend-spring-boot/src/main/resources/static/css/Login-Stylesheet.css
+++ b/website-backend-spring-boot/src/main/resources/static/css/Login-Stylesheet.css
@@ -1,23 +1,19 @@
 
+
 body {
+    display: flex;
+    flex-direction: column;
     height: 100%;
 }
 
-.container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10rem 0 10rem 0;
-    height: 70vh;
-}
 
-.container h2 {
-    font-size: 5rem;
+.form_sign_in h2 {
+    font-size: 8rem;
     padding-bottom: 10rem;
 }
 
-em {
-    font-size: 5rem;
+.form_sign_in em {
+    font-size: 8rem;
     color: #044c1f;
     font-family: 'Montserrat', sans-serif;
 }
@@ -26,6 +22,10 @@ em {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+
+    margin: auto;
+    padding: 10rem 0 10rem 0;
 
 }
 
@@ -61,6 +61,8 @@ label {
     width: 30rem;
     height: 5rem;
 
+    margin-top: 10rem;
+
     font-size: 2rem;
     color: white;
     background-color: #476F57;
@@ -68,10 +70,7 @@ label {
 
 }
 
-#footer {
-    position: absolute;
-    bottom: 0;
-}
+
 
 .form_sign_in #login-form-button:hover {
     background-color: #47fc47;
